--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -3,8 +3,15 @@ body {
 }
 
 #root {
-  height: 100vh;
+  height: 100;
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
+
+
+.search{
+  max-height: 100%;
+  max-width: 100%;
+  outline: 3px solid black;
+}
+
+
