--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <title>React boilerplate</title>
   </head>
   <body>
-    <div id="root"></div>
+
+    <div id="root"> </div>
+
   </body>
 </html>
